Fixed issue with long repo names overflowing.

--- a/css/main.less
+++ b/css/main.less
@@ -42,3 +42,11 @@ section, footer {
 footer {
 	border-bottom: 1px solid @gray-light;
 }
+
+.ellipse {
+	.text-overflow();
+}
+
+.block {
+	display: block;
+}
